# adios-smart-labeling

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  adios-plugin.toml  ecosystem.toml  install.sh
scripts/: test.sh
src/: main.rs
src/integration/: adios_integration.rs  mod.rs
tests/integration/: ecosystem_test.rs
