[package]
name = "adios-smart-labeling"
version = "0.1.0"
edition = "2021"
description = "AdiOS smart-labeling plugin"
license = "MIT"
repository = "https://github.com/tridentbiz/adios-smart-labeling"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
